plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'org.beryx.jlink' version '3.2.0'
}

group = 'xyz.metratrj'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}


dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

application {
    mainClass = 'xyz.metratrj.Main'
}

javafx {
    version = "25.0.2"
    modules = [ 'javafx.controls' ]
}

jlink {
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'JByteInspector'
        jvmArgs = ['--enable-native-access=javafx.graphics,javafx.fxml']
    }
}